--- a/blocksy-child/assets/css/contact-form.css
+++ b/blocksy-child/assets/css/contact-form.css
@@ -3,56 +3,67 @@
 */
 
 
-form input.input-form {
+form input.input-form, input.wpcf7-form-control.wpcf7-quiz {
     width: 100%;
     height: 46px;
-    border: 1px solid var(--grey);
+    border: 1px solid #bbb;
     text-align: left;
     padding: 10px 26px;
     margin-bottom: 10px;
     border-radius: 6px;
     background: rgba(255, 255, 255, 0.85);
-    font-weight: bold;
 }
-form input.button {
-    padding: 18px 40px;
+
+.quiz_captcha {
+    margin-top: 1rem;
 }
+
+input.wpcf7-form-control.wpcf7-quiz {
+    width: 100px;
+    margin-left: 7px;
+    height: 40px;
+}
+
+.dark form input.input-form {
+    background: rgba(255, 255, 255, 0.25);
+}
+
 .product-form form p {
     margin-bottom: 0;
 }
+
+.form-grid {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 14px;
+}
+
 form input.input-form, form input.input-form::placeholder, form .textarea, .input-form textarea::placeholder {
-    color: var(--grey);
-    font-size: 22px;    
-}
-.product-form form input.input-form, .product-form form input.input-form::placeholder, .product-form form .textarea, .product-form .input-form textarea::placeholder {
-    color: var(--grey);
-    font-size: 22px;  
-}
-.product-form form input.input-form:focus, .product-form form .textarea:focus {
-    border: 1px solid var(--black);
-    background: rgba(255, 255, 255, 0.3);
-}
-footer.light form input.input-form, footer.light form input.input-form::placeholder, footer.light form .textarea, footer.light textarea::placeholder {
     color: var(--black);
+    font-size: 18px;
 }
+
 form .input-form.textarea {
     height: 100px;
     margin-bottom: 0;
-    border: 1px solid var(--grey);
+    border: 1px solid #bbb;
     padding: 10px 26px;
     background: rgba(255, 255, 255, 0.85);
 }
+
 .popup__form form p {
     margin-bottom: 0;
 }
+
 .popup-menu__wrapper {
     gap: 3rem;
 }
+
 .agree-wrap {
     grid-template-columns: 1fr auto;
-    gap:16px;
+    gap: 16px;
     margin-bottom: 10px;
 }
+
 span.wpcf7-list-item input[type="checkbox"] {
     display: inline-block;
     width: 18px;
@@ -60,42 +71,100 @@ span.wpcf7-list-item input[type="checkbox"] {
     position: relative;
     top: 6px;
 }
-.agree + span.wpcf7-list-item-label {
-    font-size: 18px;
+
+.agree+span.wpcf7-list-item-label {
+    font-size: 14px;
     margin-left: 12px;
     margin-bottom: 1rem;
     display: inline-block;
-    color: var(--black);
+    color: grey;
     margin-top: -24px;
+    font-weight: 200;
 }
-.agree + span.wpcf7-list-item-label a {
-    color: var(--grey);   
+
+.dark .agree+span.wpcf7-list-item-label, .dark .agree+span.wpcf7-list-item-label a {
+    color: var(--light-grey);
 }
+
+.agree+span.wpcf7-list-item-label a {
+    color: grey;
+}
+
 .popup__form form p {
     margin-bottom: 0;
     position: relative;
 }
+
 form .wpcf7-form-control-wrap {
     position: static;
 }
-.wpcf7 form .wpcf7-not-valid-tip { 
+
+.wpcf7 form .wpcf7-not-valid-tip {
     font-size: 12px;
-    font-style:normal;
+    font-style: normal;
     margin-top: 0;
-    font-family: var(--bellota);
 }
+
 .wpcf7 form .wpcf7-response-output {
     font-size: 12px !important;
 }
+
 .wpcf7 form.invalid .wpcf7-response-output {
-    border-color: var(--red) !important;
+    border-color: red !important;
+}
+
+@media (max-width:1399px) {
+    form input.input-form, form input.input-form::placeholder, form .textarea, .input-form textarea::placeholder {
+        font-size: 14px;
+    }
+
+    form input.input-form, input.wpcf7-form-control.wpcf7-quiz {
+        height: 42px;
+        padding: 8px 18px;
+    }
+
+    form .input-form.textarea {
+        height: 90px;
+        padding: 8px 18px;
+    }
+
+    .quiz_captcha p {
+        font-size: 16px;
+        line-height: 120%;
+    }
 }
 
 @media (max-width:689.98px) {
-    .agree + span.wpcf7-list-item-label {
-        font-size: 15px;
+    .agree+span.wpcf7-list-item-label {
+        font-size: 12px;
     }
+
     .agree-wrap {
         grid-template-columns: 1fr;
+    }
+
+    .form-grid {
+        grid-template-columns: 1fr;
+        gap: 3px;
+    }
+
+    form input.input-form, form input.input-form::placeholder, form .textarea, .input-form textarea::placeholder {
+        color: var(--black);
+        font-size: 16px;
+    }
+}
+
+@media (max-width:439px) {
+    .agree+span.wpcf7-list-item-label {
+        font-size: 10px;
+        margin-left: 30px;
+        margin-top: -17px;
+        display: block;
+    }
+    form input.input-form, form input.input-form::placeholder, form .textarea, .input-form textarea::placeholder {     
+        font-size: 13px;
+    }
+    .quiz_captcha p {
+        font-size: 13px;
     }
 }
