--- a/blocksy-child/assets/css/menu.css
+++ b/blocksy-child/assets/css/menu.css
@@ -31,6 +31,32 @@
     display: block;
 }
 
+a.header__tel:hover {
+    color: grey;
+}
+
+header #primary-menu li {
+    outline: 3px solid transparent;
+    transition: outline-color .25s ease-in-out;
+}
+
+header #primary-menu li:hover, header #primary-menu li:focus {
+    outline-color: var(--purple);
+    transition: outline-color .25s ease-in-out;
+}
+
+header #primary-menu li a:hover, header #primary-menu li a:focus {
+    color: var(--white);
+}
+
+footer #primary-menu li {
+    margin-bottom: 4px;
+}
+
+footer #primary-menu li a {
+    padding: 0;
+}
+
 #primary-menu>li::after {
     content: "";
     position: absolute;
@@ -111,6 +137,10 @@ button.burger svg {
         order: 1;
     }
 
+    header.dark .header__tel {
+        order: 2;
+    }
+
     .header-center__nav {
         transform: translateX(202%);
         position: fixed;
@@ -161,6 +191,11 @@ button.burger svg {
         font-weight: 300;
     }
 
+    #primary-menu.other-pages-menu li a {
+        color: var(--white);
+        font-size: inherit;
+    }
+
 }
 
 @media (max-width:930px) and (max-height:420px) {
@@ -181,6 +216,7 @@ button.burger svg {
         font-size: 24px;
         line-height: 130%;
     }
+
     button.burger {
         width: 40px;
     }
@@ -188,6 +224,8 @@ button.burger svg {
     .header__tel {
         font-size: 18px;
     }
+
+   
 }
 
 @media (max-width:767px) {
@@ -197,6 +235,10 @@ button.burger svg {
 
     .header-center {
         width: 80px;
+    }
+
+    header.dark .header-center {
+        width: fit-content;
     }
 
     button.burger {
@@ -233,6 +275,13 @@ button.burger svg {
         line-height: 130%;
     }
 
+    #primary-menu.other-pages-menu li a {
+        font-size: 0;
+        width: 30px;
+        height: 30px;
+        background: url('../img/home_icon.svg') no-repeat center/contain;
+    }    
+
 }
 
 @media (max-width:439px) {
@@ -246,6 +295,11 @@ button.burger svg {
 
     .header__logo {
         width: 28vw;
+    }
+
+    #primary-menu.other-pages-menu li a {
+        width: 24px;
+        height: 24px;
     }
 }
 
@@ -270,10 +324,5 @@ button.burger svg {
 
     #primary-menu li a {
         font-size: 20px;
-    }
-
-    .social {
-        grid-template-columns: 25px 25px 25px;
-        gap: 6px;
     }
 }
