--- a/blocksy-child/assets/css/main.css
+++ b/blocksy-child/assets/css/main.css
@@ -95,15 +95,16 @@ section.hero * {
 
 .about-slider {
     width: 100%;
+    max-height: 38vw;
 }
 
 .about-slider__slide {
     /* height: 482px; */
 }
 
-.about .right-text-box .post p {
+.about .right-text-box .post p, .about .right-text-box .post ul li {
     font-family: var(--alice);
-    font-size: 22px;
+    font-size: 20px;
     line-height: 130%;
 }
 
@@ -345,6 +346,41 @@ h2.reviews__title {
 
 li.reviews-video__item {
     margin-bottom: 0;
+}
+
+.reviews-section__third .reviews__texts {
+    font-size: 80px;
+    line-height: 130%;
+    margin-bottom: -4px;
+}
+
+.reviews-letters__item>a {
+    display: block;
+    height: 550px;
+    overflow: hidden;
+    position: static;
+    z-index: 1;
+}
+
+.reviews-letters__item>a img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+a.picture-link::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+a.picture-link:hover::before {
+    background-color: rgba(0, 0, 0, .2);
+    transition: background-color .25s ease-in;
 }
 
 /*Reviews block end*/
@@ -689,6 +725,18 @@ footer a:active {
         font-size: 30px;
     }
 
+    .about-slider {
+        max-height: 46vw;
+    }
+
+    .reviews-letters__item>a {
+        height: 443px;
+    }
+
+    .reviews-section__third .reviews__texts {
+        font-size: 63px;
+    }
+
 }
 
 @media (max-width:1199px) {
@@ -805,6 +853,10 @@ footer a:active {
     .footer-bottom__item {
         font-size: 11px;
     }
+
+    .reviews-letters__item>a {
+        height: 390px;
+    }
 }
 
 @media (max-width:991px) {
@@ -827,6 +879,7 @@ footer a:active {
 
     .about-slider {
         height: 482px;
+        max-height: fit-content;
     }
 
     .services-list__item {
@@ -939,6 +992,14 @@ footer a:active {
     .standart-page h2 {
         font-size: 26px;
     }
+
+    .reviews-section__third .reviews__texts {
+        font-size: 58px;
+    }
+
+    .reviews-letters__item>a {
+        height: 297px;
+    }
 }
 
 @media (max-width:930px) and (max-height:420px) {
@@ -1010,6 +1071,12 @@ footer a:active {
 
     .standart-page h2 {
         font-size: 22px;
+    }
+
+    .reviews-section__third .reviews__texts {
+        font-size: 43px;
+        line-height: 98%;
+        margin-bottom: 3px;
     }
 }
 
@@ -1159,6 +1226,16 @@ footer a:active {
         font-size: 22px;
     }
 
+    .reviews-section__third .reviews__texts {
+        font-size: 43px;
+        line-height: 98%;
+        margin-bottom: 3px;
+    }
+
+    .reviews-letters__item>a {
+        height: 53vw;
+    }
+
 }
 
 @media (max-width:767px) and (max-height:420px) {
@@ -1277,5 +1354,9 @@ footer a:active {
 
     .standart-page h2 {
         font-size: 20px;
+    }
+
+    .reviews-letters__item>a {
+        height: 97vw;
     }
 }
